@@ -21,6 +21,8 @@ News
     and ``2f`` (float32) which means imports like ``import scene/2d/sprite``
     do not work anymore. Instead quotes have to be
     used: ``import "scene/2d/sprite"``. The former code never was valid Nim.
+  - The ``FD_SET`` proc from ``lib/wrappers/libuv.nim`` is now ``fd_set`` in
+    order to resolve a naming conflict.
 
 
   Library additions
